@@ -350,7 +350,7 @@ typedef enum {
 #define SE_ProcChance					200	// implemented
 #define SE_RangedProc					201	// implemented
 //#define SE_IllusionOther				202	// *not implemented as bonus(Project Illusion)
-//#define SE_MassGroupBuff				203	// *not implemented as bonus
+#define SE_MassGroupBuff				203	// implemented
 #define SE_GroupFearImmunity			204	// *not implemented as bonus
 #define SE_Rampage						205	// implemented
 #define SE_AETaunt						206	// implemented
