@@ -268,6 +268,8 @@ public:
 	void CheckNumHitsRemaining(uint8 type, uint32 buff_slot=0, uint16 spell_id=SPELL_UNKNOWN);
 	bool HasNumhits() const { return has_numhits; }
 	inline void Numhits(bool val) { has_numhits = val; }
+	bool HasMGB() const { return has_MGB; }
+	inline void SetMGB(bool val) { has_MGB = val; }
 	void SpreadVirus(uint16 spell_id, uint16 casterID);
 	bool IsNimbusEffectActive(uint32 nimbus_effect);
 	void SetNimbusEffect(uint32 nimbus_effect);
@@ -1097,6 +1099,7 @@ protected:
 	bool offhand;
 	bool has_shieldequiped;
 	bool has_numhits;
+	bool has_MGB;
 
 	// Bind wound
 	Timer bindwound_timer;
